<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StopClock</string>
    <string name="title">StopClock 倒數計時器</string>
    <string name="subtitle">點選 1 / 3 / 5 / 10 分鐘，或輸入自訂分鐘數。時間到會發出鬧鐘提醒。</string>
    <string name="preset_1">1 分鐘</string>
    <string name="preset_3">3 分鐘</string>
    <string name="preset_5">5 分鐘</string>
    <string name="preset_10">10 分鐘</string>
    <string name="custom_minutes_hint">自訂分鐘數</string>
    <string name="start_countdown">開始倒數</string>
    <string name="restart">重新</string>
    <string name="stop_zero">停止</string>
    <string name="reset">重設</string>
    <string name="status_idle">尚未開始</string>
    <string name="status_counting_down">倒數中…</string>
    <string name="status_alarm">時間到，正在提醒中</string>
    <string name="error_enter_minutes">請輸入分鐘數</string>
    <string name="error_positive_minutes">請輸入大於 0 的分鐘數</string>
    <string name="error_valid_number">請輸入有效的數字</string>
    <string name="error_audio">鬧鐘音效無法播放，請確認裝置音量</string>
    <string name="started_countdown">已開始 %1$d 分鐘倒數</string>
</resources>
